# conflag

./: .gitignore  Cargo.toml  README.md  banana.json  break_parser.cfg  conflag.py  conflag_ast.py  conflag_cli.py  conflag_lexical_backup.py  contains.cfg  make  makefile.cfg  test.cfg  test2.cfg
.github/workflows/: ci_tests.yaml  publish_release.yaml
c/: conflag.c  conflag.h  conflag.l  conflag.y  dict.c  dict.h  main.c  makefile  string.h  test.cfg
cfgmake/: c.cfg  cfgmake  core.cfg  python.cfg
cpp/: .ycm_extra_conf.py  conflag.cpp  conflag.h  conflag.l  conflag.y  conflag.y.bak  main.cpp  makefile  parser.h  right-conflag.y  test2.cfg
src/: ast.rs  binop.rs  builtins.rs  conflag.pest  lib.rs  main.rs  scope.rs  thunk.rs  value.rs
src/py/: mod.rs
src/serde/: deserializer.rs  mod.rs
src/stdlib/: core.cfg  math.rs  mod.rs
tests/: test_attrs.cfg  test_binops.rs  test_cards.cfg  test_contains.cfg  test_displayed.cfg  test_fib.cfg  test_function_calls.rs  test_import.cfg  test_map.cfg  test_mlp.cfg  test_patch.cfg  test_primitives.rs  test_scope.rs
