[package]
name = "conflag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]

[dependencies]
pest = "2.5.6"
pest_derive = "2.5.6"
serde = { version = "1.0.159", optional = true, features=["derive"] }